# rules_gcc_arm_none_eabi

./: .gitignore  .pep8  BUILD  LICENSE  MODULE.bazel  README.md  arm_gcc.bzl  base.bzl  gen.bzl  release.py
.br/: metadata.template.json
.github/workflows/: release.yml
example/: .bazelrc  .gitignore  BUILD  MODULE.bazel  lib.c  lib.cc
toolchain/: BUILD  arm_gcc_version.py  config.bzl.tpl  gen.bzl.tpl  redirect.py  toolchain.bzl
toolchain/shell/: redirect.bat  redirect.sh
