""" Module """
module(name = "rules_gcc_arm_none_eabi", version = "0.0.0", compatibility_level = 1)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")

toolchains_ext = use_extension(
    "//:arm_gcc.bzl",
    "toolchains_ext",
)
use_repo(toolchains_ext, "arm_gcc_")
register_toolchains("@arm_gcc_//:all")
